--- a/ProductAI_API_New/ProductAI_API_New.csproj
+++ b/ProductAI_API_New/ProductAI_API_New.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="productAITest.cs" />
     <Compile Include="ProdutAI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -48,6 +49,9 @@
       <Project>{bb759e24-c0c7-4ae5-8c27-0766c2704030}</Project>
       <Name>HttpWebClient</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="test.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
