--- a/ProductAITest/ProductARTest.csproj
+++ b/ProductAITest/ProductARTest.csproj
@@ -34,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ProductAISDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MalongTech.ProductAI.API.1.0.4\lib\net35\ProductAISDK.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -51,15 +55,10 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="example.csv" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="test.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ProductAISDK\ProductAISDK.csproj">
-      <Project>{ee43d193-a996-46bc-b4a6-094f1c4cb830}</Project>
-      <Name>ProductAISDK</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
