add examples and unittests

--- a/source-latest/net45/MalongTech.ProductAI.Core/productai-csahrp-sdk-core.csproj
+++ b/source-latest/net45/MalongTech.ProductAI.Core/productai-csahrp-sdk-core.csproj
@@ -46,14 +46,19 @@
   <ItemGroup>
     <Compile Include="Attribute\EnumDescriptionAttribute.cs" />
     <Compile Include="Attribute\ParaSignAttribute.cs" />
+    <Compile Include="Attribute\ServiceDescriptionAttribute.cs" />
     <Compile Include="Base\BaseRequest.cs" />
     <Compile Include="Base\BaseResponse.cs" />
     <Compile Include="DefaultProfile.cs" />
     <Compile Include="DefaultProductAIClient.cs" />
+    <Compile Include="Entity\AIService.cs" />
+    <Compile Include="Entity\SearchTag.cs" />
+    <Compile Include="Enum\ClassifyType.cs" />
     <Compile Include="Enum\ContentType.cs" />
     <Compile Include="Enum\HttpMethod.cs" />
     <Compile Include="Enum\LanguageType.cs" />
     <Compile Include="Enum\ResponseType.cs" />
+    <Compile Include="Enum\DetectType.cs" />
     <Compile Include="Exceptions\ClientException.cs" />
     <Compile Include="Exceptions\ServerException.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
@@ -62,6 +67,7 @@
     <Compile Include="Helper\SignnatureHelper.cs" />
     <Compile Include="Helper\WebQueryHelper.cs" />
     <Compile Include="Interface\IProfile.cs" />
+    <Compile Include="Interface\ITag.cs" />
     <Compile Include="Interface\IWebClient.cs" />
     <Compile Include="Internal\HttpResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
