--- a/source-latest/net45/MalongTech.ProductAI.API/productai-csharp-sdk.csproj
+++ b/source-latest/net45/MalongTech.ProductAI.API/productai-csharp-sdk.csproj
@@ -49,35 +49,19 @@
     <Compile Include="Base\DataSetSingleModifyByUrlBaseRequest.cs" />
     <Compile Include="Base\SearchByImageFileBaseRequest.cs.cs" />
     <Compile Include="Base\SearchByImageUrlBaseRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\DressingAnalysisResponse.cs" />
+    <Compile Include="Entity\ContentAnalysis\DressingClassifyResponse.cs" />
+    <Compile Include="Entity\ContentAnalysis\ClassifyByImageFileRequest.cs" />
     <Compile Include="Entity\ContentAnalysis\DressingClassifyByImageFileRequest.cs" />
     <Compile Include="Entity\ContentAnalysis\DressingClassifyByImageUrlRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\ImageContentAnalysisByImageFileRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\ImageContentAnalysisByImageUrlRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\ImageContentAnalysisResponse.cs" />
-    <Compile Include="Entity\ContentAnalysis\PlaceClassifyByImageFileRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\PlaceClassifyByImageUrlRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\PornographyClassifyByImageFileRequest.cs" />
-    <Compile Include="Entity\ContentAnalysis\PornographyClassifyByImageUrlRequest.cs" />
+    <Compile Include="Entity\ContentAnalysis\ClassifyByImageUrlRequest.cs" />
+    <Compile Include="Entity\ContentAnalysis\ClassifyResponse.cs" />
     <Compile Include="Entity\DataSet\DataSetBatchAddRequest.cs" />
     <Compile Include="Entity\DataSet\DataSetBatchDeleteRequest.cs" />
     <Compile Include="Entity\DataSet\DataSetModifyResponse.cs" />
     <Compile Include="Entity\DataSet\DataSetSingleAddByImageUrlRequest.cs" />
-    <Compile Include="Entity\Detect\Detect3CElectronicsByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\Detect3CElectronicsByImageUrlRequest.cs" />
-    <Compile Include="Entity\Detect\DetectClothByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\DetectClothByImageUrlRequest.cs" />
-    <Compile Include="Entity\Detect\DetectFoodByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\DetectFoodByImageUrlRequest.cs" />
-    <Compile Include="Entity\Detect\DetectFurnitureAndHouseholdByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\DetectFurnitureAndHouseholdByImageUrlRequest.cs" />
-    <Compile Include="Entity\Detect\DetectOrdinaryProductsByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\DetectOrdinaryProductsByImageUrlRequest.cs" />
-    <Compile Include="Entity\Detect\DetectPetByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\DetectPetByImageUrlRequest.cs" />
+    <Compile Include="Entity\Detect\DetectByImageFileRequest.cs" />
+    <Compile Include="Entity\Detect\DetectByImageUrlRequest.cs" />
     <Compile Include="Entity\Detect\DetectResponse.cs" />
-    <Compile Include="Entity\Detect\DetectVehicleByImageFileRequest.cs" />
-    <Compile Include="Entity\Detect\DetectVehicleByImageUrlRequest.cs" />
     <Compile Include="Entity\ImageSearch\ImageSearchByImageFileRequest.cs" />
     <Compile Include="Entity\ImageSearch\ImageSearchByImageUrlRequest.cs" />
     <Compile Include="Entity\ImageSearch\ImageSearchResponse.cs" />
@@ -86,8 +70,8 @@
     <Compile Include="Entity\SmartFilter\IntelligentFilterResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseResultEntity\DetectResult.cs" />
-    <Compile Include="ResponseResultEntity\DressingAnalysisResult.cs" />
-    <Compile Include="ResponseResultEntity\ImageContentAnalysisResult.cs" />
+    <Compile Include="ResponseResultEntity\DressingClassifyResult.cs" />
+    <Compile Include="ResponseResultEntity\ClassifyResult.cs" />
     <Compile Include="ResponseResultEntity\IntelligentFilterResult.cs" />
     <Compile Include="ResponseResultEntity\SearchResult.cs" />
   </ItemGroup>
