--- a/source-latest/net45/MalongTech.ProductAI.Examples/productai-csharp-sdk-examples.csproj
+++ b/source-latest/net45/MalongTech.ProductAI.Examples/productai-csharp-sdk-examples.csproj
@@ -72,7 +72,9 @@
     <Content Include="ContentAnalysis\f10.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Detect\iphone.jpg" />
+    <Content Include="Detect\iphone.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
