support extra paras and add more examples

--- a/source-latest/net45/MalongTech.ProductAI.Core/productai-csahrp-sdk-core.csproj
+++ b/source-latest/net45/MalongTech.ProductAI.Core/productai-csahrp-sdk-core.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attribute\EnumDescriptionAttribute.cs" />
+    <Compile Include="Attribute\IgnoreExtraParasAttribute.cs" />
     <Compile Include="Attribute\ParaSignAttribute.cs" />
     <Compile Include="Attribute\ServiceDescriptionAttribute.cs" />
     <Compile Include="Base\BaseRequest.cs" />
