add dataset & search service management apis

--- a/source-latest/net45/MalongTech.ProductAI.API/productai-csharp-sdk.csproj
+++ b/source-latest/net45/MalongTech.ProductAI.API/productai-csharp-sdk.csproj
@@ -49,6 +49,16 @@
     <Compile Include="Base\DataSetSingleModifyByUrlBaseRequest.cs" />
     <Compile Include="Base\SearchByImageFileBaseRequest.cs.cs" />
     <Compile Include="Base\SearchByImageUrlBaseRequest.cs" />
+    <Compile Include="Entity\Batch\PrepareByFileResponse.cs" />
+    <Compile Include="Entity\Batch\PrepareByFileRequest.cs" />
+    <Compile Include="Entity\DataSet\DeleteDataSetRequest.cs" />
+    <Compile Include="Entity\DataSet\DeleteDataSetResponse.cs" />
+    <Compile Include="Entity\DataSet\UpdateDataSetRequest.cs" />
+    <Compile Include="Entity\DataSet\UpdateDataSetResponse.cs" />
+    <Compile Include="Entity\DataSet\GetDataSetInfoResponse.cs" />
+    <Compile Include="Entity\DataSet\GetDataSetInfoRequest.cs" />
+    <Compile Include="Entity\DataSet\CreateDataSetRequest.cs" />
+    <Compile Include="Entity\DataSet\CreateDataSetResponse.cs" />
     <Compile Include="Entity\Dressing\DressingClassifyResponse.cs" />
     <Compile Include="Entity\Classify\ClassifyByImageFileRequest.cs" />
     <Compile Include="Entity\Dressing\DressingClassifyByImageFileRequest.cs" />
@@ -57,7 +67,7 @@
     <Compile Include="Entity\Classify\ClassifyResponse.cs" />
     <Compile Include="Entity\DataSet\DataSetBatchAddRequest.cs" />
     <Compile Include="Entity\DataSet\DataSetBatchDeleteRequest.cs" />
-    <Compile Include="Entity\DataSet\DataSetModifyResponse.cs" />
+    <Compile Include="Entity\DataSet\DataSetBaseResponse.cs" />
     <Compile Include="Entity\DataSet\DataSetSingleAddByImageUrlRequest.cs" />
     <Compile Include="Entity\Detect\DetectByImageFileRequest.cs" />
     <Compile Include="Entity\Detect\DetectByImageUrlRequest.cs" />
@@ -65,6 +75,14 @@
     <Compile Include="Entity\ImageSearch\ImageSearchByImageFileRequest.cs" />
     <Compile Include="Entity\ImageSearch\ImageSearchByImageUrlRequest.cs" />
     <Compile Include="Entity\ImageSearch\ImageSearchResponse.cs" />
+    <Compile Include="Entity\Service\CreateSearchServiceRequest.cs" />
+    <Compile Include="Entity\Service\CreateSearchServiceResponse.cs" />
+    <Compile Include="Entity\Service\DeleteServiceRequest.cs" />
+    <Compile Include="Entity\Service\DeleteServiceResponse.cs" />
+    <Compile Include="Entity\Service\GetServiceInfoRequest.cs" />
+    <Compile Include="Entity\Service\GetServiceInfoResponse.cs" />
+    <Compile Include="Entity\Service\UpdateServiceRequest.cs" />
+    <Compile Include="Entity\Service\UpdateServiceResponse.cs" />
     <Compile Include="Entity\SmartFilter\IntelligentFilterByImageFileRequest.cs" />
     <Compile Include="Entity\SmartFilter\IntelligentFilterByImageUrlRequest.cs" />
     <Compile Include="Entity\SmartFilter\IntelligentFilterResponse.cs" />
