add batch api|color api|dressing api

--- a/source-latest/net45/MalongTech.ProductAI.API/productai-csharp-sdk.csproj
+++ b/source-latest/net45/MalongTech.ProductAI.API/productai-csharp-sdk.csproj
@@ -49,8 +49,21 @@
     <Compile Include="Base\DataSetSingleModifyByUrlBaseRequest.cs" />
     <Compile Include="Base\SearchByImageFileBaseRequest.cs.cs" />
     <Compile Include="Base\SearchByImageUrlBaseRequest.cs" />
-    <Compile Include="Entity\Batch\PrepareByFileResponse.cs" />
-    <Compile Include="Entity\Batch\PrepareByFileRequest.cs" />
+    <Compile Include="Entity\Batch\SearchTaskRequest.cs" />
+    <Compile Include="Entity\Batch\SearchTaskResponse.cs" />
+    <Compile Include="Entity\Batch\GetSupportServicesRequest.cs" />
+    <Compile Include="Entity\Batch\GetSupportServicesResponse.cs" />
+    <Compile Include="Entity\Batch\PollTaskStatusResponse.cs" />
+    <Compile Include="Entity\Batch\CreateTaskByFileResponse.cs" />
+    <Compile Include="Entity\Batch\CreateTaskByFileRequest.cs" />
+    <Compile Include="Entity\Batch\PollTaskStatusRequest.cs" />
+    <Compile Include="Entity\Batch\CancelTaskRequest.cs" />
+    <Compile Include="Entity\Batch\StartTaskRequest.cs" />
+    <Compile Include="Entity\Batch\CancelTaskResponse.cs" />
+    <Compile Include="Entity\Batch\StartTaskResponse.cs" />
+    <Compile Include="Entity\Color\ColorClassifyByImageFileRequest.cs" />
+    <Compile Include="Entity\Color\ColorClassifyByImageUrlRequest.cs" />
+    <Compile Include="Entity\Color\ColorAnalysisResponse.cs" />
     <Compile Include="Entity\DataSet\DeleteDataSetRequest.cs" />
     <Compile Include="Entity\DataSet\DeleteDataSetResponse.cs" />
     <Compile Include="Entity\DataSet\UpdateDataSetRequest.cs" />
